add profile page

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     %sveltekit.head%
 </head>
-<body class="vertical-layout navbar-floating footer-static pace-done vertical-overlay-menu"
+<body class="vertical-layout navbar-floating vertical-overlay-menu"
       data-sveltekit-preload-data="hover">
 <div style="display: contents">%sveltekit.body%</div>
 </body>
